--- a/MPfm/MPfm.Android/Resources/Layout/PlaylistCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PlaylistCell.axml
@@ -7,20 +7,33 @@
     android:id="@+id/playlistcell_title"
     android:layout_width="0dp"
     android:layout_height="44dp"
-    android:layout_weight="1"
+    android:layout_weight="1"    
     android:minHeight="44dp"
     android:maxHeight="44dp"          
     android:padding="6dp"
     android:gravity="center_vertical"
     android:textColor="@color/dialoglist_text"
     android:textSize="16dp" />
-  <TextView
-    android:id="@+id/playlistcell_count"
+  <LinearLayout
     android:layout_width="60dp"
-    android:layout_height="44dp"
+    android:layout_height="44dp"        
     android:layout_gravity="center_vertical"
-    android:padding="6dp"
-    android:gravity="right"
-    android:textColor="@color/dialoglist_text"
-    android:textSize="16dp" />
+    android:layout_marginRight="8dp"
+    android:gravity="center_vertical"
+    android:orientation="vertical">  
+    <TextView
+      android:id="@+id/playlistcell_count"
+      android:layout_width="60dp"
+      android:layout_height="wrap_content"      
+      android:gravity="right"
+      android:textColor="@color/dialoglist_text"
+      android:textSize="16dp" />
+    <TextView
+      android:layout_width="60dp"
+      android:layout_height="wrap_content"
+      android:gravity="right"
+      android:text="songs"
+      android:textColor="#CCCCCC"
+      android:textSize="11dp" />
+  </LinearLayout>
 </LinearLayout>
