--- a/MPfm/MPfm.WindowsPhone/Classes/Pages/MainPage.xaml
+++ b/MPfm/MPfm.WindowsPhone/Classes/Pages/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="clr-namespace:MPfm.WindowsPhone.Classes.Controls"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -41,16 +42,45 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
-            <TextBlock Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <phone:Pivot Height="736" Title="SESSIONS" Margin="0,0,10,0">
+                <phone:PivotItem CacheMode="{x:Null}" Header="artists">
+                    <phone:LongListSelector x:Name="listArtists" HorizontalAlignment="Left" Height="571" VerticalAlignment="Top" Width="424" SelectionChanged="listArtists_SelectionChanged">
+                        <phone:LongListSelector.ItemTemplate>
+                            <DataTemplate>
+                                <controls:ListArtistControl />
+                            </DataTemplate>
+                        </phone:LongListSelector.ItemTemplate>
+                    </phone:LongListSelector>
+                </phone:PivotItem>
+                <phone:PivotItem CacheMode="{x:Null}" Header="albums">
+                    <phone:LongListSelector x:Name="listAlbums" HorizontalAlignment="Left" Height="571" VerticalAlignment="Top" Width="424"/>
+                </phone:PivotItem>
+                <phone:PivotItem CacheMode="{x:Null}" Header="songs">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="61*"/>
+                            <ColumnDefinition Width="87*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Content="Button" HorizontalAlignment="Left" Margin="59,0,0,463" Click="Button_Click" Height="72" VerticalAlignment="Bottom"/>
+                        <TextBlock x:Name="txtStuff" HorizontalAlignment="Left" Margin="56,48,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Grid.Column="1"/>
+                    </Grid>
+                </phone:PivotItem>
+                <phone:PivotItem CacheMode="{x:Null}" Header="playlists">
+                    <Grid/>
+                </phone:PivotItem>
+                <phone:PivotItem CacheMode="{x:Null}" Header="more">
+                    <phone:LongListSelector x:Name="listMore" HorizontalAlignment="Left" Height="571" VerticalAlignment="Top" Width="424" SelectionChanged="listMore_SelectionChanged">
+                        <phone:LongListSelector.ItemTemplate>
+                            <DataTemplate>
+                                <controls:ListSimpleControl />
+                            </DataTemplate>
+                        </phone:LongListSelector.ItemTemplate>
+                    </phone:LongListSelector>
+                </phone:PivotItem>
+            </phone:Pivot>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Button Content="Button" HorizontalAlignment="Left" Margin="204,157,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-            <TextBlock x:Name="txtStuff" HorizontalAlignment="Left" Margin="92,52,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-
-        </Grid>
 
         <!--Uncomment to see an alignment grid to help ensure your controls are
             aligned on common boundaries.  The image has a top margin of -32px to
