--- a/MPfm/MPfm.Android/Resources/Layout/EqualizerPresets.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/EqualizerPresets.axml
@@ -35,6 +35,15 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
+        android:progressDrawable="@drawable/progress"
+        android:thumb="@drawable/thumb"
+        android:thumbOffset="8dp"
+        android:paddingTop="10px" 
+        android:paddingBottom="10px"
+        android:paddingLeft="24px" 
+        android:paddingRight="24px" 
+        android:minHeight="10dp"
+        android:maxHeight="10dp"         
         android:max="100" />
       <TextView
         android:id="@+id/equalizerPresets_lblBypass"          
