--- a/MPfm/MPfm.Android/Resources/Layout/EqualizerPresets.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/EqualizerPresets.axml
@@ -36,14 +36,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
         android:progressDrawable="@drawable/progress"
-        android:thumb="@drawable/thumb"
+        android:thumb="@drawable/thumb_big"
         android:thumbOffset="8dp"
         android:paddingTop="10px" 
         android:paddingBottom="10px"
         android:paddingLeft="24px" 
         android:paddingRight="24px" 
-        android:minHeight="10dp"
-        android:maxHeight="10dp"         
+        android:minHeight="12dp"
+        android:maxHeight="12dp"         
         android:max="100" />
       <TextView
         android:id="@+id/equalizerPresets_lblBypass"          
