--- a/MPfm/MPfm.Android/Resources/Layout/LibraryPreferences.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/LibraryPreferences.axml
@@ -43,7 +43,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"        
-        android:background="@drawable/button_selector"
+        android:background="@drawable/button"
         android:text="Reset Library"
         android:textColor="@color/button_textcolor"
         android:textSize="14dp"        
@@ -55,7 +55,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/button_selector"
+        android:background="@drawable/button"
         android:text="Update Library"
         android:textColor="@color/button_textcolor"        
         android:textSize="14dp"        
