--- a/MPfm/MPfm.Android/Resources/Layout/LockScreen.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/LockScreen.axml
@@ -6,99 +6,6 @@
   android:orientation="vertical"
   android:gravity="center"              
   android:background="@color/background">
-  <ImageView
-    android:id="@+id/lockScreen_imageAlbum"
-    android:layout_width="300dp"
-    android:layout_height="300dp"
-    android:padding="4dp"
-    android:background="@android:color/transparent" />
-  <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
-    <TextView
-      android:id="@+id/lockScreen_lblArtistName"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center"
-      android:textColor="#FFFFFF"
-      android:text=""
-      android:textSize="22dp"
-      android:padding="0dp"
-      android:ellipsize="end"
-      android:singleLine="true" />
-    <TextView
-      android:id="@+id/lockScreen_lblAlbumTitle"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center"
-      android:text=""
-      android:textColor="#CCCCCC"
-      android:textSize="18dp"
-      android:padding="2dp"
-      android:ellipsize="end"
-      android:singleLine="true" />
-    <TextView
-      android:id="@+id/lockScreen_lblSongTitle"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center"
-      android:text=""
-      android:textColor="#AAAAAA"
-      android:textSize="16dp"
-      android:padding="3dp"
-      android:ellipsize="end"
-      android:singleLine="true" />
-  </LinearLayout>
-  <LinearLayout
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <ImageButton
-      android:id="@+id/lockScreen_btnPrevious"
-      android:layout_width="60dp"
-      android:layout_height="44dp"
-      android:background="@android:color/transparent"
-      android:src="@drawable/player_previous"
-      android:padding="60dp" />
-    <ImageButton
-      android:id="@+id/lockScreen_btnPlayPause"
-      android:layout_width="60dp"
-      android:layout_height="44dp"
-      android:background="@android:color/transparent"
-      android:src="@drawable/player_pause"
-      android:padding="60dp" />
-    <ImageButton
-      android:id="@+id/lockScreen_btnNext"
-      android:layout_width="60dp"
-      android:layout_height="44dp"
-      android:background="@android:color/transparent"
-      android:src="@drawable/player_next"
-      android:padding="60dp" />
-    <ImageButton
-      android:id="@+id/lockScreen_btnPlaylist"
-      android:layout_width="60dp"
-      android:layout_height="44dp"
-      android:background="@android:color/transparent"
-      android:src="@drawable/player_playlist"
-      android:padding="20dp" />
-    <ImageButton
-      android:id="@+id/lockScreen_btnRepeat"
-      android:layout_width="60dp"
-      android:layout_height="44dp"
-      android:background="@android:color/transparent"
-      android:src="@drawable/player_repeat"
-      android:padding="20dp" />
-    <ImageButton
-      android:id="@+id/lockScreen_btnShuffle"
-      android:layout_width="60dp"
-      android:layout_height="44dp"
-      android:background="@android:color/transparent"
-      android:src="@drawable/player_shuffle"
-      android:padding="20dp" />
-  </LinearLayout>
   <LinearLayout
     android:id="@+id/lockScreen_layoutPosition"
     android:orientation="horizontal"
@@ -119,6 +26,15 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
+      android:progressDrawable="@drawable/progress"
+      android:thumb="@drawable/thumb_big"
+      android:thumbOffset="8dp"
+      android:paddingTop="10px"
+      android:paddingBottom="10px"
+      android:paddingLeft="24px"
+      android:paddingRight="24px"
+      android:minHeight="12dp"
+      android:maxHeight="12dp"
       android:max="10000" />
     <TextView
       android:id="@+id/lockScreen_lblLength"
@@ -129,13 +45,106 @@
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:padding="6dp" />
-  </LinearLayout>  
+  </LinearLayout>
+  <FrameLayout
+    android:layout_width="300dp"
+    android:layout_height="300dp">
+    <ImageView
+      android:id="@+id/lockScreen_imageAlbum"
+      android:layout_width="300dp"
+      android:layout_height="300dp"
+      android:background="@android:color/transparent" />
+    <LinearLayout
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom"
+      android:background="#AA000000"
+      android:orientation="vertical"
+      android:padding="8dp">
+      <TextView
+        android:id="@+id/lockScreen_lblArtistName"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:text=""
+        android:textSize="20dp"
+        android:padding="0dp"
+        android:ellipsize="end"
+        android:singleLine="true" />
+      <TextView
+        android:id="@+id/lockScreen_lblAlbumTitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text=""
+        android:textColor="#EEEEEE"
+        android:textSize="16dp"
+        android:padding="2dp"
+        android:ellipsize="end"
+        android:singleLine="true" />
+      <TextView
+        android:id="@+id/lockScreen_lblSongTitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text=""
+        android:textColor="#DDDDDD"
+        android:textSize="14dp"        
+        android:padding="3dp"
+        android:ellipsize="end"
+        android:singleLine="true" />
+    </LinearLayout>
+  </FrameLayout>
+  <LinearLayout
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
+    android:layout_marginTop="20dp"    
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <ImageButton
+      android:id="@+id/lockScreen_btnRepeat"
+      android:layout_width="60dp"
+      android:layout_height="60dp"
+      android:background="@drawable/roundbutton"
+      android:src="@drawable/player_repeat"
+      android:padding="20dp" />
+    <ImageButton
+      android:id="@+id/lockScreen_btnPrevious"
+      android:layout_width="60dp"
+      android:layout_height="60dp"
+      android:background="@drawable/roundbutton"
+      android:src="@drawable/player_previous"
+      android:padding="60dp" />
+    <ImageButton
+      android:id="@+id/lockScreen_btnPlayPause"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:background="@drawable/roundbutton"
+      android:src="@drawable/player_pause"
+      android:padding="60dp" />
+    <ImageButton
+      android:id="@+id/lockScreen_btnNext"
+      android:layout_width="60dp"
+      android:layout_height="60dp"
+      android:background="@drawable/roundbutton"
+      android:src="@drawable/player_next"
+      android:padding="60dp" />
+    <ImageButton
+      android:id="@+id/lockScreen_btnShuffle"
+      android:layout_width="60dp"
+      android:layout_height="60dp"
+      android:background="@drawable/roundbutton"
+      android:src="@drawable/player_shuffle"
+      android:padding="20dp" />
+  </LinearLayout>
   <Button
     android:id="@+id/lockScreen_btnClose"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"    
-    android:background="@drawable/transparentbutton_selector"
+    android:layout_gravity="center"
+    android:layout_marginTop="20dp"
+    android:background="@drawable/transparentbutton"
     android:text="Close"
     android:textColor="@color/transparentbutton_textcolor"
     android:textSize="14dp"
