--- a/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="52dp"
-   android:background="@drawable/list_selector"
+   android:background="@drawable/list"
    android:minHeight="52dp"
    android:maxHeight="52dp">
   <LinearLayout
@@ -64,7 +64,7 @@
     android:layout_height="fill_parent"
     android:layout_gravity="right"
     android:layout_marginRight="4dp"
-    android:background="@drawable/listgradient_selector"
+    android:background="@drawable/listgradient"
     android:orientation="horizontal">
   </LinearLayout>
   <LinearLayout
@@ -147,7 +147,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="4dp"
         android:layout_marginRight="4dp"
-        android:background="@drawable/albumcellbutton_selector"
+        android:background="@drawable/albumcellbutton"
         android:src="@drawable/actionbar_play" />
       <ImageButton
         android:id="@+id/mobileLibraryBrowserCell_imageAdd"
@@ -155,7 +155,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="4dp"        
         android:layout_marginRight="4dp"
-        android:background="@drawable/albumcellbutton_selector"
+        android:background="@drawable/albumcellbutton"
         android:src="@drawable/actionbar_add" />
       <ImageButton
         android:id="@+id/mobileLibraryBrowserCell_imageDelete"
@@ -163,7 +163,7 @@
         android:layout_height="44dp"
         android:layout_marginRight="2dp"
         android:layout_marginTop="4dp"        
-        android:background="@drawable/albumcellbutton_selector"
+        android:background="@drawable/albumcellbutton"
         android:src="@drawable/actionbar_trash" />
       <ImageView
         android:id="@+id/mobileLibraryBrowserCell_imageNowPlaying"
