--- a/MPfm/MPfm.Android/Resources/Layout/SelectPlaylist.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/SelectPlaylist.axml
@@ -17,7 +17,7 @@
     android:layout_height="wrap_content"
     android:drawableLeft="@drawable/actionbar_add"
     android:drawablePadding="2dp"
-    android:background="@drawable/dialogbutton_selector"
+    android:background="@drawable/dialogbutton"
     android:text="Add new playlist"
     android:textColor="@color/dialogbutton_text"
     android:textSize="14dp"
@@ -42,7 +42,7 @@
       android:layout_weight="1"
       android:drawableLeft="@drawable/actionbar_cancel"
       android:drawablePadding="2dp"      
-      android:background="@drawable/dialogbutton_selector"
+      android:background="@drawable/dialogbutton"
       android:text="Cancel"
       android:textColor="@color/dialogbutton_text"
       android:textSize="14dp"
@@ -52,9 +52,9 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
-      android:drawableLeft="@drawable/selectimage_selector"
+      android:drawableLeft="@drawable/selectimage"
       android:drawablePadding="2dp"      
-      android:background="@drawable/dialogbutton_selector"
+      android:background="@drawable/dialogbutton"
       android:text="Select"
       android:textColor="@color/dialogbutton_text"
       android:textSize="14dp"
