--- a/MPfm/MPfm.Android/Resources/Layout/playlist_spinner_item.xml
+++ b/MPfm/MPfm.Android/Resources/Layout/playlist_spinner_item.xml
@@ -5,7 +5,7 @@
   android:singleLine="true"
   android:layout_width="fill_parent"
   android:layout_height="44dp"
-  android:background="@drawable/spinner_selector"
+  android:background="@drawable/spinner"
   android:textColor="#FFFFFF"
   android:textSize="13dp"
   android:padding="6dp"
