--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -74,12 +74,60 @@
       android:scaleType="centerCrop"
       android:adjustViewBounds="true"
       android:background="#000000" />
-    <android.support.v4.view.ViewPager
+    <LinearLayout
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:orientation="vertical">
+      <android.support.v4.view.ViewPager
         android:id="@+id/player_pager"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#00000000">
-    </android.support.v4.view.ViewPager>
+      </android.support.v4.view.ViewPager>
+      <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:orientation="horizontal"
+        android:background="#AA000000"
+        android:gravity="center">
+        <Button
+          android:id="@+id/player_carrouselDot1"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_margin="4dp"
+          android:background="@drawable/carrouseldot" />
+        <Button
+          android:id="@+id/player_carrouselDot2"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_margin="4dp"
+          android:enabled="false"
+          android:background="@drawable/carrouseldot" />
+        <Button
+          android:id="@+id/player_carrouselDot3"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_margin="4dp"
+          android:enabled="false"
+          android:background="@drawable/carrouseldot" />
+        <Button
+          android:id="@+id/player_carrouselDot4"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_margin="4dp"
+          android:enabled="false"
+          android:background="@drawable/carrouseldot" />
+        <Button
+          android:id="@+id/player_carrouselDot5"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_margin="4dp"
+          android:enabled="false"
+          android:background="@drawable/carrouseldot" />
+      </LinearLayout>
+    </LinearLayout>
   </FrameLayout>
   <LinearLayout
     android:id="@+id/player_layoutButtons"
