--- a/MPfm/MPfm.WindowsStore/Classes/Pages/Main.xaml
+++ b/MPfm/MPfm.WindowsStore/Classes/Pages/Main.xaml
@@ -1,10 +1,10 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
-    x:Class="MPfm.WindowsStore.Main"
+    x:Class="MPfm.WindowsStore.Classes.Pages.Main"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MPfm.WindowsStore"
+    xmlns:local="using:MPfm.WindowsStore.Classes.Pages"
     xmlns:common="using:MPfm.WindowsStore.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -23,7 +23,7 @@
             ItemsPath="TopItems"/>
 
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">Sessions</x:String>
+        <x:String x:Key="AppName">My Application</x:String>
     </Page.Resources>
 
     <!--
@@ -122,14 +122,6 @@
             <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
             <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Grid.Column="1" IsHitTestVisible="false" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
-        <StackPanel Grid.Row="1" Margin="120,30,0,0">
-            <TextBlock Text="What's your name?"/>
-            <StackPanel Orientation="Horizontal" Margin="0,20,0,20">
-                <TextBox x:Name="nameInput" Width="300" HorizontalAlignment="Left"/>
-                <Button Content="Say &quot;Hello&quot;" Click="Button_Click"/>
-            </StackPanel>
-            <TextBlock x:Name="greetingOutput"/>
-        </StackPanel>
 
         <VisualStateManager.VisualStateGroups>
 
