--- a/MPfm/MPfm.WindowsPhone/Classes/Controls/ListSubtitleControl.xaml
+++ b/MPfm/MPfm.WindowsPhone/Classes/Controls/ListSubtitleControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MPfm.WindowsPhone.Classes.Controls.ListArtistControl"
+﻿<UserControl x:Class="MPfm.WindowsPhone.Classes.Controls.ListSubtitleControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,10 +9,7 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     d:DesignHeight="480" d:DesignWidth="480">
 
-    <Grid x:Name="LayoutRoot">
-        <Grid.Background>
-            <SolidColorBrush Color="#20282e"/>
-        </Grid.Background>
+    <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneBackgroundBrush}">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="CommonStates">
                 <VisualState x:Name="Normal"/>
@@ -26,6 +23,7 @@
         </VisualStateManager.VisualStateGroups>
         <StackPanel Margin="0,0,0,17">
             <TextBlock x:Name="textBlock" Text="{Binding}" TextWrapping="Wrap" Style="{StaticResource PhoneTextLargeStyle}"/>
+            <TextBlock x:Name="textBlock2" Text="{Binding Subtitle}" TextWrapping="Wrap" Style="{StaticResource PhoneTextSmallStyle}"/>
         </StackPanel>
     </Grid>
 </UserControl>
