--- a/MPfm/MPfm.WindowsPhone/Classes/Pages/PlayerPage.xaml
+++ b/MPfm/MPfm.WindowsPhone/Classes/Pages/PlayerPage.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage
+﻿<local:BasePage
     x:Class="MPfm.WindowsPhone.PlayerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,6 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MPfm.WindowsPhone.Classes.Pages.Base"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -29,4 +30,4 @@
         </phone:Pivot>
     </Grid>
     
-</phone:PhoneApplicationPage>
+</local:BasePage>
