--- a/MPfm/MPfm.WindowsPhone/Classes/Pages/SyncDownloadPage.xaml
+++ b/MPfm/MPfm.WindowsPhone/Classes/Pages/SyncDownloadPage.xaml
@@ -1,5 +1,5 @@
 ﻿<local:BasePage
-    x:Class="MPfm.WindowsPhone.Classes.Pages.SyncPage"
+    x:Class="MPfm.WindowsPhone.Classes.Pages.SyncDownloadPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -39,7 +39,7 @@
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
+    <!--LayoutRoot is the root grid where all page content is placed-->    
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -49,7 +49,7 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,18,0,12">
             <TextBlock Text="SYNC LIBRARY WITH DEVICES" Style="{StaticResource PhoneTextNormalStyle}" FontFamily="Segoe WP Semibold" FontSize="22"/>
-            <TextBlock Text="nearby devices" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" FontSize="72"/>
+            <TextBlock Text="downloading" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" FontSize="72"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
@@ -61,14 +61,8 @@
             <TextBlock x:Name="lblIPAddress" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="My IP address is" VerticalAlignment="Top" Width="436"/>
             <TextBlock x:Name="lblStatus" HorizontalAlignment="Left" Margin="10,42,0,0" TextWrapping="Wrap" Text="Refreshing devices..." VerticalAlignment="Top" Width="436"/>
             <ProgressBar x:Name="progressBar" HorizontalAlignment="Left" Height="16" Margin="0,74,0,0" VerticalAlignment="Top" Width="446"/>
-            <phone:LongListSelector x:Name="listDevices" HorizontalAlignment="Left" Height="421" Margin="10,113,0,0" VerticalAlignment="Top" Width="446" Grid.RowSpan="2" SelectionChanged="listDevices_SelectionChanged">
-                <phone:LongListSelector.ItemTemplate>
-                    <DataTemplate>
-                        <controls:ListSyncDeviceControl />
-                    </DataTemplate>
-                </phone:LongListSelector.ItemTemplate>
-            </phone:LongListSelector>
-            <Button x:Name="btnConnectManual" Content="Connect manually to device" HorizontalAlignment="Left" Margin="0,413,0,0" Grid.Row="1" VerticalAlignment="Top" Width="456" Click="btnConnectManual_Click"/>
+
         </Grid>
     </Grid>
+
 </local:BasePage>
