--- a/MPfm/MPfm.WindowsStore/Classes/Pages/MainPage.xaml
+++ b/MPfm/MPfm.WindowsStore/Classes/Pages/MainPage.xaml
@@ -1,13 +1,14 @@
-﻿<common:LayoutAwarePage
+﻿<base:BasePage
     x:Name="pageRoot"
-    x:Class="MPfm.WindowsStore.TestPage"
+    x:Class="MPfm.WindowsStore.Classes.Pages.MainPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MPfm.WindowsStore"
+    xmlns:local="using:MPfm.WindowsStore.Classes.Pages"
     xmlns:common="using:MPfm.WindowsStore.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:base="using:MPfm.WindowsStore.Classes.Pages.Base"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -22,8 +23,6 @@
             IsSourceGrouped="true"
             ItemsPath="TopItems"/>
 
-        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">Sessions</x:String>
     </Page.Resources>
 
     <!--
@@ -44,13 +43,11 @@
             AutomationProperties.Name="Grouped Items"
             Grid.RowSpan="2"
             Padding="116,137,40,46"
-            ItemsSource="{Binding Source={StaticResource groupedItemsViewSource}}"
-            ItemTemplate="{StaticResource Standard250x250ItemTemplate}"
             SelectionMode="None"
             IsSwipeEnabled="false">
 
             <GridView.ItemsPanel>
-                <ItemsPanelTemplate>                        
+                <ItemsPanelTemplate>
                     <VirtualizingStackPanel Orientation="Horizontal"/>
                 </ItemsPanelTemplate>
             </GridView.ItemsPanel>
@@ -77,6 +74,7 @@
                     </GroupStyle.Panel>
                 </GroupStyle>
             </GridView.GroupStyle>
+            <Button Content="Button" Click="Button_Click"/>
         </GridView>
 
         <!-- Vertical scrolling list only used when snapped -->
@@ -120,16 +118,8 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
-            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Grid.Column="1" IsHitTestVisible="false" Style="{StaticResource PageHeaderTextStyle}"/>
+            <TextBlock x:Name="pageTitle" Text="Sessions" Grid.Column="1" IsHitTestVisible="false" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
-        <StackPanel Grid.Row="1" Margin="120,30,0,0">
-            <TextBlock Text="What's your name?"/>
-            <StackPanel Orientation="Horizontal" Margin="0,20,0,20">
-                <TextBox x:Name="nameInput" Width="300" HorizontalAlignment="Left"/>
-                <Button Content="Say &quot;Hello&quot;" Click="Button_Click"/>
-            </StackPanel>
-            <TextBlock x:Name="greetingOutput"/>
-        </StackPanel>
 
         <VisualStateManager.VisualStateGroups>
 
@@ -175,4 +165,4 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
     </Grid>
-</common:LayoutAwarePage>
+</base:BasePage>
