--- a/MPfm/MPfm.WindowsStore/Classes/Pages/SyncPage.xaml
+++ b/MPfm/MPfm.WindowsStore/Classes/Pages/SyncPage.xaml
@@ -47,20 +47,45 @@
             <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
             <TextBlock x:Name="pageTitle" Text="Sync Library With Devices" Grid.Column="1" IsHitTestVisible="false" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
-        <StackPanel Grid.Row="1" Margin="120,30,0,0">
-            <TextBlock x:Name="lblIPAddress" Text="My IP address is" FontSize="16"/>
-            <TextBlock x:Name="lblStatus" Text="Loading..." FontSize="16"/>
-            <ProgressBar x:Name="progressBar" Height="20" Margin="0,0,79,0" RenderTransformOrigin="0.5,0.5">
+        <Grid Grid.Row="1" Margin="120,30,0,30">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" x:Name="lblIPAddress" Text="My IP address is" FontSize="16" />
+            <TextBlock Grid.Row="1" x:Name="lblStatus" Text="Loading..." FontSize="16" Margin="0,10,0,0" />
+            <ProgressBar Grid.Row="2" x:Name="progressBar" Height="20" Margin="0,10,79,0" RenderTransformOrigin="0.5,0.5">
                 <ProgressBar.RenderTransform>
                     <CompositeTransform ScaleY="-1"/>
                 </ProgressBar.RenderTransform>
             </ProgressBar>
-            <StackPanel Orientation="Horizontal" Margin="0,20,0,20">
+            <ListView Grid.Row="3" x:Name="listView" Height="Auto" Margin="0,10,80,0" VerticalAlignment="Stretch">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Height="52" Margin="6">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Border Background="#FF36454F" Width="52" Height="52">
+                                <!--<Image Source="{Binding Image}" Stretch="UniformToFill"/>-->
+                            </Border>
+                            <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
+                                <TextBlock Text="{Binding Name}" Style="{StaticResource TitleTextStyle}" TextWrapping="NoWrap"/>
+                                <TextBlock Text="{Binding Url}" Style="{StaticResource CaptionTextStyle}" TextWrapping="NoWrap"/>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <StackPanel Grid.Row="4" Orientation="Horizontal">
                 <Button x:Name="btnConnectManual" Content="Connect to device manually" Click="btnConnectManual_Click"/>
+                <Button x:Name="btnRefresh" Content="Refresh" Click="btnRefresh_Click"/>
             </StackPanel>
-            <TextBlock x:Name="greetingOutput"/>
-        </StackPanel>
-        <ListView x:Name="listView" Height="339" Width="1085"/>
+        </Grid>
 
         <VisualStateManager.VisualStateGroups>
 
