--- a/MPfm/MPfm.WindowsStore/Common/Colours.xaml
+++ b/MPfm/MPfm.WindowsStore/Common/Colours.xaml
@@ -1,10 +1,8 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MPfm.WindowsStore.Common">
-    <Color x:Key="ThemeDominant">#FFBFB49F</Color>
-    <Color x:Key="ThemeSubDominant">#FF467302</Color>
-    <Color x:Key="ThemeAccent">#FFF2F2F2</Color>
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Color x:Key="ThemeBackground">#FF20282E</Color>
     <Color x:Key="ThemeForeground">#FFFFFFFF</Color>
+    <Color x:Key="ThemePrimary">#FF36454F</Color>
+    <Color x:Key="ThemeSecondary">#FFE74C3C</Color>
 </ResourceDictionary>
